[package]
name = "webrtc-signal-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "json"] }
axum-extra = "0.9.3"
futures = "0.3.30"
headers = "0.4.0"
reqwest-websocket = { version = "0.4.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
webrtc = "0.11.0"
